--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <table cellspacing="0" cellpadding="5" border="1">
 <tr valign="center">
 <td colspan="5">
-<b><font size="6.5">My Website</font></b><br>
+<b><font size="6.5">ComputerBlade</font></b><br>
 <font size="3">Making Computers Essential and Powerful!</font>
 </td>
 </tr>
