--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,7 @@
 <table cellspacing="0" cellpadding="5" border="1">
 <tr valign="center">
 <td colspan="5">
-<b><font size="6.5">My Website</font></b><br>
+<b><font size="6.5">ComputerBlade</font></b><br>
 <font size="3">Making Computers Essential and Powerful!</font>
 </td>
 </tr>
@@ -42,7 +42,7 @@
 <tr height="100px" valign="top">
 <td colspan="4">
 <b><font size="5">POST-TEST-1</font></b><br>
-<font size="3">🕒 27 December, 2022 | 👤 Admin</font><br>
+<font size="3">🕒 27 December, 2022 | 👤 System_Default</font><br>
 <a href="posts/post-test-1.html">Read More...</a>
 </td>
 <td colspan="1">
