--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,17 @@
 </tr>
 <tr height="331px" valign="top">
 <td colspan="5">
-<p>My paragraph</p>
+<p>You can contact me via the following options: </p>
+<ul>
+<li>Email me at ayproductionsteam@gmail.com</li>
+<li>Contact me through messaging at one of these forums: </li>
+<br>
+<ul>
+<li><a href="https://community.rapidbuilder.tech/u/computerblade4146/summary"> Rapid Builder Community</a> &emsp; <b><font color="pink">RECOMMENDED</font></b></li>
+<li><a href="https://community.appinventor.mit.edu/u/ayproductions/summary"> App Inventor Community</a></li>
+
+</ul>
+</ul>
 </td>
 </tr>
 <tr>
