--- a/contact.html
+++ b/contact.html
@@ -7,19 +7,19 @@
 <center>
 <table cellspacing="0" cellpadding="5" border="1">
 <tr valign="center">
-<td colspan="5">
+<td colspan="5" bgcolor="mediumseagreen">
 <b><font size="6.5">ComputerBlade</font></b><br>
 <font size="3">Making Computers Essential and Powerful!</font>
 </td>
 </tr>
-<tr>
+<tr bgcolor="green">
 <td width="100px" align="center"><a href="index.html">HOME</a></td>
 <td width="100px" align="center"><a href="software.html">SOFTWARE</a></td>
 <td width="100px" align="center"><a href="posts.html">POSTS</a></td>
 <td width="100px" align="center"><a href="about.html">ABOUT<b></a></td>
 <td width="100px" align="center"><b>CONTACT</b></td>
 </tr>
-<tr height="331px" valign="top">
+<tr height="331px" valign="top" bgcolor="teal">
 <td colspan="5">
 <p>You can contact me via the following options: </p>
 <ul>
