--- a/posts.html
+++ b/posts.html
@@ -7,19 +7,19 @@
 <center>
 <table cellspacing="0" cellpadding="5" border="1">
 <tr valign="center">
-<td colspan="5">
+<td colspan="5" bgcolor="mediumseagreen">
 <b><font size="6.5">ComputerBlade</font></b><br>
 <font size="3">Making Computers Essential and Powerful!</font>
 </td>
 </tr>
-<tr>
+<tr bgcolor="green">
 <td width="100px" align="center"><a href="index.html">HOME</a></td>
 <td width="100px" align="center"><a href="software.html">SOFTWARE</a></td>
 <td width="100px" align="center"><b>POSTS</b></td>
 <td width="100px" align="center"><a href="about.html">ABOUT</a></td>
 <td width="100px" align="center"><a href="contact.html">CONTACT</a></td>
 </tr>
-<tr height="100px" valign="top">
+<tr height="100px" valign="top"  bgcolor="teal">
 <td colspan="4">
 <b><font size="5">Why do I hardcode these blogs?</font></b><br>
 <font size="3">🕒 27 December, 2022 | 👤 Admin</font><br>
@@ -29,7 +29,7 @@
 <img width="100%" height="100vh" alt="Blog OGR image" src="index_img/placeholder-for-posts.png" border="1">
 </td>
 </tr>
-<tr height="100px" valign="top">
+<tr height="100px" valign="top" bgcolor="teal">
 <td colspan="4">
 <b><font size="5">My Intro</font></b><br>
 <font size="3">🕒 27 December, 2022 | 👤 Admin</font><br>
@@ -39,7 +39,7 @@
 <img width="100%" height="100vh" alt="Blog OGR image" src="index_img/placeholder-for-posts.png" border="1">
 </td>
 </tr>
-<tr height="100px" valign="top">
+<tr height="100px" valign="top" bgcolor="teal">
 <td colspan="4">
 <b><font size="5">POST-TEST-1</font></b><br>
 <font size="3">🕒 27 December, 2022 | 👤 System_Default</font><br>
@@ -50,7 +50,7 @@
 </td>
 </tr>
 <tr height="31px">
-<td colspan="5" align="center"><< 1 of 1 >></td>
+<td colspan="5" align="center" bgcolor="green"><< 1 of 1 >></td>
 </tr>
 <td colspan="5" align="right" bgcolor="mediumseagreen">Copyright &copy; 2022 - 2023. All rights reserved.</td>
 </tr>
