--- a/software.html
+++ b/software.html
@@ -7,19 +7,19 @@
 <center>
 <table cellspacing="0" cellpadding="5" border="1">
 <tr valign="center">
-<td colspan="5">
+<td colspan="5" bgcolor="mediumseagreen">
 <b><font size="6.5">ComputerBlade</font></b><br>
 <font size="3">Making Computers Essential and Powerful!</font>
 </td>
 </tr>
-<tr>
+<tr bgcolor="green">
 <td width="100px" align="center"><a href="index.html">HOME</a></td>
 <td width="100px" align="center"><b>SOFTWARE</b></td>
 <td width="100px" align="center"><a href="posts.html">POSTS</a></td>
 <td width="100px" align="center"><a href="about.html">ABOUT</a></td>
 <td width="100px" align="center"><a href="contact.html">CONTACT</a></td>
 </tr>
-<tr height="331px" valign="top">
+<tr height="331px" valign="top" bgcolor="teal">
 <td colspan="5">
 <p>There is no software available right now!</p>
 </td>
