--- a/software.html
+++ b/software.html
@@ -25,7 +25,7 @@
 </td>
 </tr>
 <tr height="31px">
-<td colspan="5" align="center"><< 1 of 1 >></td>
+<td colspan="5" align="center" bgcolor="green"><< 1 of 1 >></td>
 </tr>
 <td colspan="5" align="right" bgcolor="mediumseagreen">Copyright &copy; 2022 - 2023. All rights reserved.</td>
 </tr>
