--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <td colspan="5">
 <p>You can contact me via the following options: </p>
 <ul>
-<li>Email me at ayproductionsteam@gmail.com</li>
+<li>Email me at <a href="mailto:ayproductionsteam@gmail.com">ayproductionsteam@gmail.com</a></li>
 <li>Contact me through messaging at one of these forums: </li>
 <br>
 <ul>
