--- a/posts.html
+++ b/posts.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PM5DCGZ4Z6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PM5DCGZ4Z6');
+</script>
 <title> CB | Posts</title>
 </head>
 <body bgcolor="seagreen" text="white" link="white" vlink="white" alink="white">
