--- a/posts.html
+++ b/posts.html
@@ -1,14 +1,5 @@
 <html>
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PM5DCGZ4Z6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-PM5DCGZ4Z6');
-</script>
 <title> CB | Posts</title>
 </head>
 <body bgcolor="seagreen" text="white" link="white" vlink="white" alink="white">
@@ -42,7 +33,7 @@
 <td colspan="4">
 <b><font size="5">My Intro</font></b><br>
 <font size="3">🕒 27 December, 2022 | 👤 Admin</font><br>
-<a href="posts/post-test-1.html">Read More...</a>
+<a href="posts/my-intro.html">Read More...</a>
 </td>
 <td colspan="1">
 <img width="100%" height="100vh" alt="Blog OGR image" src="index_img/placeholder-for-posts.png" border="1">
