--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="delay_time; URL=https://computerblade.github.io/index.html" />
+    <meta http-equiv="refresh" content="0; URL=https://computerblade.github.io/index.html" />
     <title>Redirecting to homepage...</title>
   </head>
   <body>
