--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <td colspan="4">
 <b><font size="5">The Dangerous Trolls: Official Series</font></b><br>
 <font size="3">🕒 16 January, 2023 | 👤 Admin</font><br>
-<a href="posts/post-test-1.html">Read More...</a>
+<a href="posts/the-dangerous-trolls-official-series.html">Read More...</a>
 </td>
 <td colspan="1">
 <img width="100%" height="100vh" alt="Blog OGR image" src="index_img/placeholder-for-posts.png" border="1">
