--- a/software/python-ide.html
+++ b/software/python-ide.html
@@ -1,1 +1,55 @@
+<html>
+<head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PM5DCGZ4Z6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-PM5DCGZ4Z6');
+</script>
+<title> CB | POST-TEST-1</title>
+</head>
+<body bgcolor="seagreen" text="white" link="white" vlink="white" alink="white">
+<font face="sans-serif">
+<center>
+<table cellspacing="0" cellpadding="5" border="1">
+<tr valign="center">
+<td colspan="5" bgcolor="mediumseagreen">
+<b><font size="6.5">ComputerBlade</font></b><br>
+<font size="3">Making Computers Essential and Powerful!</font>
+</td>
+</tr>
+<tr bgcolor="green">
+<td width="100px" align="center"><a href="../index.html">HOME</a></td>
+<td width="100px" align="center"><a href="../software.html">SOFTWARE</a></td>
+<td width="100px" align="center"><b>POSTS</b></td>
+<td width="100px" align="center"><a href="../about.html">ABOUT</a></td>
+<td width="100px" align="center"><a href="../contact.html">CONTACT</a></td>
+</tr>
+<tr height="331px" valign="top" bgcolor="teal">
+<td colspan="5">
+<p>
+<b><font size="5">Python IDE</font></b><br>
+<font size="3">🕒 29 January, 2023 | 👤 Admin</font><br>
+<hr>
+<p>
+I know, it's not an IDE but a code editor. I get it. It will turn into an IDE soon. Observe this, this is a hobby project of mine. I made this because I am tired of the popular IDEs as they take PC space all over. It's better to have a lightweight version of an IDE, I wasn't satisfied with regular code editors as they don't compile the programs on their own. <br><br>
+And now, the moment you've all been waiting for.....
+<br>Here are....the screenshots
+<br><br>
+<img src="soft1img1.png" alt="Screenshot 1">
+<br><br>
+Download: <a href="PythonIDE-setup" download>Python IDE setup (Windows Only)</a>
+</p>
+</p>
+</td>
+</tr>
+<tr>
+<td colspan="5" align="right" bgcolor="mediumseagreen">Copyright &copy; 2022 - 2023. All rights reserved.</td>
+</tr>
+</center>
+</font>
+</body>
+</html>
