--- a/sounds/index.html
+++ b/sounds/index.html
@@ -1,5 +1,5 @@
-You will find sounds here:
+You will find sounds here:<br><br>
 
 Whatsapp recieve msg sound : <a href="../sounds/Messaging/WhatsApp2.mp3">Click here</a>
-
+<br><br>
 More sounds coming soon!
