--- a/404.html
+++ b/404.html
@@ -13,11 +13,11 @@
 </td>
 </tr>
 <tr bgcolor="green">
-<td width="100px" align="center"><a href="index.html">HOME</a></td>
-<td width="100px" align="center"><a href="software.html">SOFTWARE</a></td>
-<td width="100px" align="center"><a href="posts.html">POSTS</a></td>
-<td width="100px" align="center"><a href="about">ABOUT</a></td>
-<td width="100px" align="center"><a href="contact.html">CONTACT</a></td>
+<td width="100px" align="center"><a href="../index.html">HOME</a></td>
+<td width="100px" align="center"><a href="../software.html">SOFTWARE</a></td>
+<td width="100px" align="center"><a href="../posts.html">POSTS</a></td>
+<td width="100px" align="center"><a href="../about.html">ABOUT</a></td>
+<td width="100px" align="center"><a href="../contact.html">CONTACT</a></td>
 </tr>
 <tr height="331px" valign="midle" bgcolor="teal">
 <td colspan="5">
