--- a/software/python-ide.html
+++ b/software/python-ide.html
@@ -41,7 +41,7 @@ And now, the moment you've all been waiting for.....
 <br><br>
 <img src="soft1img1.png" alt="Screenshot 1">
 <br><br>
-Download: <a href="PythonIDE-setup" download>Python IDE setup (Windows Only)</a>
+Download: <a href="PythonIDE-setup.exe" download>Python IDE setup (Windows Only)</a>
 </p>
 </p>
 </td>
